# OOP-Project

./: CMakeLists.txt  README.md  main.cpp
.github/actions/clang-tidy/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/install-packages/: action.yml
.github/actions/process-artifacts/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
